# impedance-rs

./: .gitignore  Cargo.toml  README.md  analysis.py  main.py  pyproject.toml
.github/workflows/: ci.yml
data/: example.csv
pymodules/: fformat.py
src/: circuits.rs  elements.rs  fitting.rs  lib.rs
tests/: test_smoke.py
