[project]
name = "impedance-rs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "maturin>=1.11.5",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
]
[build-system]
requires = ["maturin>=1.11.5"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "maturin>=1.11.5",
    "pytest>=9.0.2",
    "ruff>=0.14.11",
]
